--- a/source/MFA.Producer.Application/MFA.Producer.Application.csproj
+++ b/source/MFA.Producer.Application/MFA.Producer.Application.csproj
@@ -4,4 +4,22 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CommandHandlers\Teachers\" />
+    <Folder Include="Commands\Teachers\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="3.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
+    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MFA.Domain\MFA.Domain.csproj" />
+    <ProjectReference Include="..\MFA.ServiceBus\MFA.ServiceBus.csproj" />
+  </ItemGroup>
+
 </Project>
