--- a/source/MFA.ServiceBus.Kafka/MFA.ServiceBus.Kafka.csproj
+++ b/source/MFA.ServiceBus.Kafka/MFA.ServiceBus.Kafka.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1705;NU1701</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="0.11.0" NoWarn="NU1701" />
+    <PackageReference Include="MediatR" Version="3.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MFA.Domain\MFA.Domain.csproj" />
+    <ProjectReference Include="..\MFA.ServiceBus\MFA.ServiceBus.csproj" />
+  </ItemGroup>
+
 </Project>
