--- a/source/MFA.Infrastructure/MFA.Infrastructure.csproj
+++ b/source/MFA.Infrastructure/MFA.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MFA.Domain\MFA.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
