--- a/source/MFA.Auth.WebAPI/MFA.Auth.WebAPI.csproj
+++ b/source/MFA.Auth.WebAPI/MFA.Auth.WebAPI.csproj
@@ -11,10 +11,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MFA.Auth.Application\MFA.Auth.Application.csproj" />
   </ItemGroup>
 
 </Project>
