--- a/source/MFA.Auth.WebAPI/appsettings.json
+++ b/source/MFA.Auth.WebAPI/appsettings.json
@@ -11,5 +11,20 @@
         "Default": "Warning"
       }
     }
+  },
+
+  "MongoDB": {
+    "ConnectionString": "mongodb://10.0.75.1:27017",
+    "Database": "mfav01"
+  },
+
+  "ServiceBus": {
+    "ConnectionString": "10.0.75.1:9092",
+    "Topic": "mfav01"
+  },
+
+  "Security": {
+    "SecretKey": "DD4E5175-7818-4FDE-8811-4666DDA51166",
+    "Issuer": "http://jambo"
   }
 }
