--- a/source/Jambo.Producer.Infrastructure/appsettings.json
+++ b/source/Jambo.Producer.Infrastructure/appsettings.json
@@ -15,12 +15,12 @@
 
   "MongoDB": {
     "ConnectionString": "mongodb://10.0.75.1:27017",
-    "Database": "jambov32"
+    "Database": "mfav01"
   },
 
   "ServiceBus": {
     "ConnectionString": "10.0.75.1:9092",
-    "Topic": "jambov32"
+    "Topic": "mfav01"
   },
 
   "Security": {
